added css on home page

--- a/styles.css
+++ b/styles.css
@@ -58,12 +58,15 @@ nav ul li a {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-/* Hover effect for images */
+
 .image-gallery img:hover {
   transform: scale(1.05); /* zoom in slightly */
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
   cursor: pointer;}
 
-
-
-
+  h1 {
+    text-align: center;
+    color: #000000;
+    font-size: 36px;
+    margin: 40px 0 20px 0;
+  }
