--- a/styles.css
+++ b/styles.css
@@ -70,3 +70,47 @@ nav ul li a {
     font-size: 36px;
     margin: 40px 0 20px 0;
   }
+ pre {
+    padding: 15px;
+    border-radius: 8px;
+    overflow-x: auto;
+    font-family: 'roboto', sans-serif;
+    font-size: 14px;
+    line-height: 1.6;
+    margin: 20px 0;
+    text-align: center;}
+
+    p {
+    text-align: center;
+    font-size: 18px;
+    font-family: 'roboto', sans-serif;
+    margin: 10px 0 30px 0;
+}
+h2, h3 {
+    color: #000000;
+    text-align: center;
+} 
+ul#serviceslist {
+    list-style-type: square;
+    padding-left: 20px;
+    display: inline-block;
+    text-align: left;
+    
+}
+#team {
+    margin-top: 30px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+.about-image {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 30px;
+    display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: px; /* space between images */
+  margin: 40px auto;
+  max-width: 900px; /* optional: limits how wide it gets */
+}
